tests/should-fail/rawcodes/rawcodelit-6.j
globals
    integer j = 'ab'
endglobals